ajout partie projet et ocntact

--- a/src/components/accueil/accueil.scss
+++ b/src/components/accueil/accueil.scss
@@ -18,7 +18,7 @@
 
       h2 {
          font-size: 90px;
-         font-family: 'Romanesco', cursive;
+         font-family: 'Yellowtail', cursive;
       }
 
       hr {
