--- a/src/components/competences/competences.scss
+++ b/src/components/competences/competences.scss
@@ -10,7 +10,7 @@
 
    h2 {
       color: $white-color;
-      font-family: 'Romanesco', cursive;
+      font-family: 'Yellowtail', cursive;
       font-size: 50px;
       margin-bottom: 40px;
    }
