--- a/src/components/a-propos/a-propos.scss
+++ b/src/components/a-propos/a-propos.scss
@@ -6,10 +6,10 @@
    align-items: center;
    justify-content: space-between;
    gap: 40px;
-   padding: 30px 20px;
+   padding: 30px 120px;
 
    h2 {
-      font-family: 'Romanesco', cursive;
+      font-family: 'Yellowtail', cursive;
       font-size: 50px;
       color: $white-color;
    }
