--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,11 +6,16 @@
    flex-direction: column;
    align-items: center;
    gap: 30px;
-   padding: 30px 80px;
+   padding: 200px 120px 70px 120px;
 
    h2 {
-      font-family: 'Romanesco', cursive;
+      font-family: 'Yellowtail', cursive;
       font-size: 50px;
       color: $text-color;
+   }
+
+   p {
+      font-size: 20px;
+      margin-bottom: 10px;
    }
 }
