--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -3,6 +3,11 @@
 .collapse {
    width: 80%;
    position: relative;
+
+   button:hover {
+      cursor: pointer;
+   }
+
    button {
       width: 100%;
       height: 52px;
