--- a/src/components/competences/competences.scss
+++ b/src/components/competences/competences.scss
@@ -68,6 +68,7 @@
             svg {
                width: 50px;
                height: 50px;
+               color: $text-color;
             }
          }
       }
