--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,12 +1,13 @@
 @import '../../styles/variables.scss';
 
 #contact {
-   padding: 60px 70px 140px 70px;
+   padding: 60px 70px 100px 70px;
    background-color: $main-color;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 40px;
+
    h2 {
       font-family: 'Yellowtail', cursive;
       font-size: 50px;
@@ -53,7 +54,7 @@
             width: 100%;
             height: 60px;
             border-radius: 3px;
-            font-size: 14px;
+            font-size: 16px;
             padding-left: 8px;
             border: none;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -63,7 +64,7 @@
             width: 100%;
             min-height: 120px;
             border-radius: 3px;
-            font-size: 14px;
+            font-size: 16px;
             padding: 5px 0 0 8px;
             border: none;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -72,6 +73,12 @@
          button {
             color: $white-color;
             background-color: $text-color;
+            font-size: 22px;
+            font-weight: 500;
+         }
+
+         button:hover {
+            cursor: pointer;
          }
       }
    }
