--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -1,13 +1,28 @@
 @import '../../../styles/variables.scss';
 
 footer {
-   height: 100px;
+   height: 80px;
    background-color: $text-color;
    display: flex;
    align-items: center;
    justify-content: center;
-
+   gap: 150px;
    h3 {
       color: $white-color;
+   }
+
+   .logo {
+      display: flex;
+      gap: 40px;
+      svg {
+         color: $white-color;
+         font-size: 40px;
+         transition: color 0.3s;
+      }
+
+      svg:hover {
+         color: $main-color;
+         cursor: pointer;
+      }
    }
 }
