--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -6,58 +6,40 @@ header {
    justify-content: space-between;
    backdrop-filter: blur(3px);
    width: 100%;
-   height: 30px;
+   height: 45px;
    position: fixed;
    top: 0; /* Fixe le header en haut de la fenêtre */
    z-index: 100; /* Pour qu'il soit toujours au dessus des autres*/
 
-   h1 {
-      height: 100%;
+   .header-left {
       display: flex;
       align-items: center;
-   }
+      gap: 30px;
 
-   nav {
-      height: 100%;
-      display: flex;
-      align-items: center;
-   }
+      img {
+         width: 64px;
+         height: 64px;
+         border-radius: 50%;
+         object-fit: cover;
+         margin: 25px 0 0 30px;
+      }
 
-   ul {
-      display: flex;
-      list-style-type: none;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      li {
-         height: 100%;
+      .logo {
          display: flex;
-         align-items: center;
-         a {
-            height: 100%;
-            display: flex;
-            align-items: center;
-            padding: 0 8px;
-            background-color: rgba($text-color, 0.3);
+         gap: 10px;
+         margin-top: 3px;
+
+         svg {
+            font-size: 25px;
             color: $white-color;
-            font-size: 15px;
-            font-weight: 500;
-            transition:
-               background-color 1s ease,
-               color 1s ease;
+            background-color: $text-color;
+            border-radius: 50%;
+            padding: 7px 7px;
+            transition: color 0.3s;
          }
-
-         .first-nav {
-            border-radius: 4px 0 0 4px;
-         }
-
-         .last-nav {
-            border-radius: 0 4px 4px 0;
-         }
-
-         a.active {
-            background-color: rgba($main-color, 0.9);
-            color: $white-color;
+         svg:hover {
+            color: $main-color;
+            cursor: pointer;
          }
       }
    }
