--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,10 +6,15 @@
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-weight: 300;
    font-size: 22px;
-   color: $text-color;
 }
 a {
    text-decoration: none;
    color: inherit; /* Utilise la couleur du texte du parent */
    cursor: pointer;
+}
+
+h2,
+h3,
+p {
+   color: $text-color;
 }
