--- a/src/components/accueil/accueil.scss
+++ b/src/components/accueil/accueil.scss
@@ -1,4 +1,6 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
+
 #accueil {
    background-image: url('../../assets/images/developpeur_img.webp');
    background-size: cover;
@@ -15,10 +17,16 @@
       border-top: 5px solid $main-color;
       border-radius: 3px;
       box-shadow: 0px 2px 18px 0px rgba(0, 0, 0, 0.3);
+      @include mobile() {
+         width: 250px;
+      }
 
       h2 {
          font-size: 90px;
          font-family: 'Yellowtail', cursive;
+         @include mobile() {
+            font-size: 60px;
+         }
       }
 
       hr {
@@ -30,6 +38,11 @@
 
       h3 {
          font-size: 40px;
+
+         @include mobile() {
+            font-size: 25px;
+            margin-top: 5px;
+         }
       }
    }
 }
