--- a/src/components/competences/competences.scss
+++ b/src/components/competences/competences.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
 
 #competences {
    display: flex;
@@ -13,12 +14,22 @@
       font-family: 'Yellowtail', cursive;
       font-size: 50px;
       margin-bottom: 40px;
+      @include mobile() {
+         font-size: 40px;
+      }
    }
 
    .competences-container {
       display: flex;
+      justify-content: center;
       gap: 200px;
       margin-bottom: 20px;
+      @include tablette() {
+         gap: 50px;
+      }
+      @include mobile() {
+         gap: 20px;
+      }
 
       .mern {
          background-color: $white-color;
@@ -30,10 +41,18 @@
          border-top: 5px solid $main-color;
          border-radius: 3px;
          box-shadow: 0px 2px 18px 0px rgba(0, 0, 0, 0.3);
+         @include mobile() {
+            width: 100%;
+            height: 250px;
+         }
 
          h3 {
             font-weight: 500;
             padding-top: 10px;
+            text-align: center;
+            @include mobile() {
+               font-size: 16px;
+            }
          }
 
          img {
@@ -54,10 +73,19 @@
          border-radius: 3px;
          box-shadow: 0px 2px 18px 0px rgba(0, 0, 0, 0.3);
          gap: 31px;
+         @include mobile() {
+            width: 100%;
+            height: 250px;
+            gap: 15px;
+         }
 
          h3 {
             font-weight: 500;
             padding-top: 10px;
+            text-align: center;
+            @include mobile() {
+               font-size: 16px;
+            }
          }
 
          .icone-container {
@@ -65,10 +93,16 @@
             grid-template-columns: 1fr 1fr 1fr;
             grid-column-gap: 20px;
             grid-row-gap: 20px;
+            @include mobile() {
+               padding: 0 4px;
+            }
+
             svg {
-               width: 50px;
-               height: 50px;
+               font-size: 45px;
                color: $text-color;
+               @include mobile() {
+                  width: 100%;
+               }
             }
          }
       }
