--- a/src/components/portfolio/gallery/card/card.scss
+++ b/src/components/portfolio/gallery/card/card.scss
@@ -1,4 +1,5 @@
 @import '../../../../styles/variables.scss';
+@import '../../../../styles/mixin.scss';
 
 .gallery__card {
    position: relative;
@@ -7,6 +8,9 @@
    border-radius: 10px;
    align-items: center;
    justify-content: center;
+   @include mobile() {
+      margin: auto;
+   }
 
    img {
       width: 100%;
@@ -23,6 +27,12 @@
       transition: opacity 0.3s ease;
       color: $white-color;
       font-weight: 500;
+      @include mobile() {
+         font-size: 30px;
+      }
+      @include small-mobile() {
+         font-size: 22px;
+      }
    }
 }
 
