--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixin.scss';
 
 #portfolio {
    background-color: $grey-color;
@@ -7,15 +8,32 @@
    align-items: center;
    gap: 30px;
    padding: 50px 120px 70px 120px;
+   @include tablette() {
+      padding: 50px 80px 70px 80px;
+   }
+   @include small-mobile() {
+      padding: 45px 40px 60px 40px;
+      gap: 20px;
+   }
 
    h2 {
       font-family: 'Yellowtail', cursive;
       font-size: 50px;
       color: $text-color;
+      @include mobile() {
+         font-size: 40px;
+      }
    }
 
    p {
       font-size: 20px;
       margin-bottom: 30px;
+      text-align: center;
+      @include mobile() {
+         font-size: 16px;
+      }
+      @include small-mobile() {
+         font-size: 14px;
+      }
    }
 }
