--- a/src/components/accueil/accueil.scss
+++ b/src/components/accueil/accueil.scss
@@ -20,12 +20,19 @@
       @include mobile() {
          width: 250px;
       }
+      @include micro-mobile() {
+         width: 130px;
+         padding: 0;
+      }
 
       h2 {
          font-size: 90px;
          font-family: 'Yellowtail', cursive;
          @include mobile() {
             font-size: 60px;
+         }
+         @include micro-mobile() {
+            font-size: 40px;
          }
       }
 
@@ -42,6 +49,9 @@
          @include mobile() {
             font-size: 25px;
             margin-top: 5px;
+         }
+         @include micro-mobile() {
+            font-size: 18px;
          }
       }
    }
