--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -34,6 +34,18 @@
          @include mobile() {
             font-size: 18px;
          }
+         @include very-small-mobile() {
+            font-size: 12px;
+         }
+      }
+
+      img {
+         @include very-small-mobile() {
+            width: 22px;
+         }
+         @include micro-mobile() {
+            width: 16px;
+         }
       }
    }
 
@@ -69,8 +81,11 @@
          @include mobile() {
             font-size: 16px;
          }
-         @include mobile() {
-            font-size: 14px;
+         @include small-mobile() {
+            font-size: 12px;
+         }
+         @include very-small-mobile() {
+            font-size: 10px;
          }
       }
    }
