--- a/src/components/competences/competences.scss
+++ b/src/components/competences/competences.scss
@@ -16,6 +16,10 @@
       margin-bottom: 40px;
       @include mobile() {
          font-size: 40px;
+         text-align: center;
+      }
+      @include micro-mobile() {
+         font-size: 30px;
       }
    }
 
@@ -29,6 +33,9 @@
       }
       @include mobile() {
          gap: 20px;
+      }
+      @include very-small-mobile() {
+         flex-direction: column;
       }
 
       .mern {
