--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,6 +14,9 @@
    @include very-small-mobile() {
       padding: 60px 30px 100px 30px;
    }
+   @include very-small-mobile() {
+      padding: 60px 15px 100px 15px;
+   }
 
    h2 {
       font-family: 'Yellowtail', cursive;
@@ -22,6 +25,10 @@
       margin-bottom: 20px;
       @include mobile() {
          font-size: 40px;
+         text-align: center;
+      }
+      @include micro-mobile() {
+         font-size: 30px;
       }
    }
 
@@ -108,6 +115,16 @@
 
          button:hover {
             cursor: pointer;
+         }
+
+         p {
+            color: $white-color;
+            font-size: 18px;
+            text-align: center;
+
+            @include micro-mobile() {
+               font-size: 14px;
+            }
          }
       }
    }
