--- a/src/components/a-propos/a-propos.scss
+++ b/src/components/a-propos/a-propos.scss
@@ -40,7 +40,7 @@
 
       .photo-id {
          width: 200px;
-         height: auto;
+         height: 100%;
          object-fit: cover;
          border: 3px solid $white-color;
          border-radius: 5px;
