--- a/src/components/portfolio/gallery/card/card.scss
+++ b/src/components/portfolio/gallery/card/card.scss
@@ -8,15 +8,19 @@
    border-radius: 10px;
    align-items: center;
    justify-content: center;
+
+   width: 100%;
+   height: 260px;
+
    @include mobile() {
       margin: auto;
+      height: 230px;
    }
 
    img {
       width: 100%;
       height: 100%;
-
-      object-fit: contain;
+      object-fit: fill;
       border-radius: 10px;
       transition: filter 0.3s;
    }
@@ -41,5 +45,5 @@
 }
 
 figure:hover img {
-   filter: brightness(70%); // Ajoute un filtre au survol
+   filter: brightness(70%);
 }
