--- a/src/components/portfolio/gallery/card/card.scss
+++ b/src/components/portfolio/gallery/card/card.scss
@@ -9,11 +9,10 @@
    align-items: center;
    justify-content: center;
    width: 100%;
-   height: 260px;
+   height: 100%;
 
    @include mobile() {
       margin: auto;
-      height: 230px;
    }
 
    img {
