--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -35,6 +35,8 @@
       font-size: 20px;
       margin-bottom: 30px;
       text-align: center;
+      width: 80%;
+      
       @include mobile() {
          font-size: 16px;
       }
