--- a/src/components/portfolio/gallery/card/card.scss
+++ b/src/components/portfolio/gallery/card/card.scss
@@ -9,7 +9,6 @@
    align-items: center;
    justify-content: center;
    width: 100%;
-   height: 100%;
 
    @include mobile() {
       margin: auto;
@@ -17,8 +16,7 @@
 
    img {
       width: 100%;
-      height: 100%;
-      object-fit: fill;
+      object-fit: cover;
       border-radius: 10px;
       transition: filter 0.3s;
    }
