--- a/src/components/portfolio/gallery/gallery.scss
+++ b/src/components/portfolio/gallery/gallery.scss
@@ -7,6 +7,7 @@
    grid-template-columns: 1fr 1fr;
    grid-gap: 80px;
    width: 90%;
+   align-items: stretch;
 
    @include tablette() {
       grid-gap: 30px;
@@ -17,6 +18,7 @@
 
    figure {
       transition: transform 0.3s;
+      height: 100%;
    }
 
    figure:hover {
